<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/where_you_at_bg1_tall">

    <TextView
            android:id="@+id/titletext"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/dog_image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:text="@string/start_screen_main_text"
            android:textSize="45sp"
            android:textStyle="bold"
            android:gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/casual"
            android:textColor="@android:color/holo_red_dark"
            android:textAllCaps="true" />

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="45dp">


        <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:contentDescription="@string/refresh"
                android:text="@string/create_button"
                android:background="@drawable/btn_glass_navy_border"
                android:layout_margin="10dp"
                android:fontFamily="@font/casual"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="@android:color/holo_red_dark" />

        <Button
                android:id="@+id/btnJoin"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:contentDescription="@string/refresh"
                android:layout_margin="10dp"
                android:text="@string/join_existing_button"
                android:background="@drawable/btn_glass_navy_border"
                android:fontFamily="@font/casual"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>